yaml/openfaas/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openfaas
  annotations:
    kubernetes.io/ingress.class: traefik
  namespace: "openfaas"
spec:
  rules:
  - http:
      paths:
      - path: /ui
        backend:
          serviceName: gateway-external
          servicePort: http
