yaml/openfaas/ingressroute.yaml
# Declaring the user list
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: openfaas-auth
  namespace: openfaas
spec:
  basicAuth:
    secret: openfaas-users
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gateway-admin
  namespace: openfaas
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`openfaas.tk`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: gateway-admin
      port: 8080
    middlewares:
      - name: openfaas-auth
